@startuml
!theme plain
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle

package "resident.domain.model" #F4F6F6 {
  class Residents {
    - _id: number
    - _name: string
    - _lastname: string
    - _dni: string
    - _birthDate: Date
    - _age: number
    - _medicalInsurance: string
    - _chronicDiseases: string[]
    ' ... many other properties
    - calculateAge(birthDate: Date): number
  }
}

package "resident.application" #F4F6F6 {
  class ResidentStore {
    - _residentSignal: Signal<Residents[]>
    - _loadingSignal: Signal<boolean>
    - _errorSignal: Signal<string|null>
    - ResidentApi: ResidentApi
    + residents: Signal<Residents[]>
    + loading: Signal<boolean>
    + error: Signal<string|null>
    + getResidentById(id: number): Signal<Residents>
    + addResident(resident: Residents)
    + updateResident(resident: Residents)
    + deleteResident(id: number)
    + loadResidents()
  }
}

package "resident.infrastructure" #F4F6F6 {
  class ResidentApi {
    - _residentsApiEndPoint: ResidentApiEndpoint
    + createResident(r: Residents): Observable<Residents>
    + updateResident(r: Residents): Observable<Residents>
    + deleteResident(id: number): Observable<void>
    + getResidents(): Observable<Residents[]>
  }
  class ResidentApiEndpoint {
    ' Methods inherited from a Base Class
  }
  class ResidentAssembler {
    + toEntityFromResource(res: ResidentResource): Residents
    + toResourceFromEntity(ent: Residents): ResidentResource
  }
  interface ResidentResource {
    id: number
    name: string
    lastname: string
    dni: string
    birthDate: string
    ' ... many other properties
  }
}

package "resident.presentation" #F4F6F6 {
  object ResidentRouter {
    routes: Routes
  }

  package "resident-detail" {
     class ResidentDetail <<component>> {
        ' Properties & methods for viewing a resident
     }
  }
  package "resident-form-create" {
     class ResidentFormCreate <<component>> {
        ' Properties & methods for the creation form
     }
  }
  package "resident-form-edit" {
     class ResidentFormEdit <<component>> {
        ' Properties & methods for the editing form
     }
  }
   package "resident-form-list" {
     class ResidentFormList <<component>> {
        ' Properties & methods for listing residents
     }
  }
}

' --- Relationships ---

' Presentation Layer (Components use the store)
ResidentFormCreate --> ResidentStore : "uses"
ResidentFormEdit --> ResidentStore : "uses"
ResidentFormList --> ResidentStore : "uses"
ResidentDetail --> ResidentStore : "uses"
ResidentFormCreate --> Residents : "creates"
ResidentFormEdit --> Residents : "creates"


' Routing
ResidentRouter ..> ResidentFormCreate : "lazy loads"
ResidentRouter ..> ResidentFormList : "lazy loads"
ResidentRouter ..> ResidentFormEdit : "lazy loads"
ResidentRouter ..> ResidentDetail : "lazy loads"


' Application Layer
ResidentStore --> ResidentApi : "uses"
ResidentStore ..> Residents : "manages state of"


' Infrastructure Layer
ResidentApi --> ResidentApiEndpoint : "delegates to"
ResidentApiEndpoint ..> ResidentAssembler : "uses"

' Assemblers
ResidentAssembler --> Residents : "creates"
ResidentAssembler ..> ResidentResource : "transforms"

@enduml
